Fixup: Canvas No Longer Soft-Locks When Changing Graphics Acceleration Setting

Initial attempt to fix this bug, tracked origin from commit:
5aef0e99a7b64a8cdb6970803e9c080d47e918e6

NOTE: Originally, we didn't always check for *new* canvas assignments, only
that the canvas wasn't within a specific data structure.

BUG:423840
(cherry picked from commit c0362a9cafa18c035215ebc2703fe5f6ff456220)