libs/ui/input/kis_input_manager_p.cpp
@@ -258,6 +258,9 @@ void KisInputManager::Private::CanvasSwitcher::removeCanvas(KisCanvas2 *canvas)
     }
 
     widget->removeEventFilter(this);
+
+    d->canvas = 0;
+    d->toolProxy = 0;
 }
 
 bool isInputWidget(QWidget *w)
